--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -119,3 +119,7 @@
   border-radius: 10px;
   background-image: linear-gradient(59deg, #FF768A 0%, #F4398A 100%);
 }
+.alert{
+  position: fixed;
+  width: 90%;
+}
