--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,10 +1,3 @@
-@font-face {
-  font-family: norwester;
-  src:
-  url(../fonts/norwester.ttf),
-  url(../fonts/norwester.otf) format("opentype")
-}
-
 .clearfix:after {
   content: ".";
   display: block;
@@ -17,6 +10,12 @@
 }
 .mt-10{
   margin-top: 10px;
+}
+.ml-10{
+  margin-left: 10px;
+}
+.ml-40{
+  margin-left: 40px;
 }
 .mt-15{
   margin-top: 15px;
