--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -11,6 +11,12 @@
 .mt-10{
   margin-top: 10px;
 }
+.mt-20{
+  margin-top: 20px;
+}
+.mt-30{
+  margin-top: 30px;
+}
 .ml-10{
   margin-left: 10px;
 }
@@ -74,51 +80,4 @@
 
 .ml-5 {
   margin-left: 5px !important;
-}
-
-
-.btn-primary,btn-primary:hover {
-  color: #fff;
-  background-image: linear-gradient(59deg, #FF768A 0%, #F4398A 100%);
-  box-shadow: 0 -2px 2px 0 rgba(39,52,125,0.10);
-  border-radius: 10px;
-  border: 0;
-}
-.btn-primary:active {
-  color: #fff;
-  background-image: linear-gradient(59deg, rgb(226, 47, 125) 0%, rgb(226, 47, 125) 100%);
-}
-.btn-primary.disabled, .btn-primary:disabled {
-  color: #fff;
-  background-color: #b7b7b8;
-}
-.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
-  color: #fff;
-  background-image: linear-gradient(59deg, rgb(226, 47, 125) 0%, rgb(226, 47, 125) 100%);
-}
-.btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 -2px 2px 0 rgba(39,52,125,0.10);
-}
-.btn-primary:focus, .btn-primary.focus {
-  box-shadow: 0 -2px 2px 0 rgba(39,52,125,0.10);
-}
-.exchange-btn{
-  color: #fff;
-  line-height: 45px;
-  font-size: 20px;
-  text-align: center;
-  border-radius: 10px;
-  background-image: linear-gradient(59deg, #36F0F7 0%, #35BBF8 100%);
-}
-.vote-btn{
-  color: #fff;
-  line-height: 45px;
-  font-size: 20px;
-  text-align: center;
-  border-radius: 10px;
-  background-image: linear-gradient(59deg, #FF768A 0%, #F4398A 100%);
-}
-.alert{
-  position: fixed;
-  width: 90%;
 }
